--- a/src/Symfasize/Bundle/ConfigurationBundle/Resources/views/Configuration/index.html.twig
+++ b/src/Symfasize/Bundle/ConfigurationBundle/Resources/views/Configuration/index.html.twig
@@ -15,7 +15,7 @@
             </div>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-3 hidden-xs">
             <img src="{{ asset('images/logo.jpg') }}" alt="Symfasize" height="200"/>
         </div>
     </div>
