fixed linked to github issues

--- a/src/Symfasize/Bundle/ConfigurationBundle/Resources/views/Static/about.html.twig
+++ b/src/Symfasize/Bundle/ConfigurationBundle/Resources/views/Static/about.html.twig
@@ -74,7 +74,7 @@
             <h3>Which are your next steps?</h3>
 
             <p>
-                Please check the <a href="{{ repository_issues_url }}/assigned/frastel?state=open">issue
+                Please check the <a href="{{ repository_issues_url }}/issues/assigned/frastel?state=open">issue
                     list on GitHub</a> for that.
                 On every assigned issue will be worked on.
             </p>
