removed setup hint with chmod

--- a/src/Symfasize/Bundle/ConfigurationBundle/Resources/views/Configuration/index.html.twig
+++ b/src/Symfasize/Bundle/ConfigurationBundle/Resources/views/Configuration/index.html.twig
@@ -40,8 +40,7 @@
             <div>
                 <br/>
                 <code>
-                    chmod 744 symfasize.sh<br/>
-                    ./symfasize.sh
+                    /bin/bash symfasize.sh
                 </code>
             </div>
         </div>
@@ -53,8 +52,7 @@
                 <br/>
                 <code>
                     unzip symfasize.zip<br/>
-                    chmod 744 symfasize/symfasize.sh<br/>
-                    ./symfasize/symfasize.sh
+                    /bin/bash symfasize/symfasize.sh
                 </code>
             </div>
         </div>
