moved contribution alert to bottom

--- a/src/Symfasize/Bundle/ConfigurationBundle/Resources/views/Configuration/index.html.twig
+++ b/src/Symfasize/Bundle/ConfigurationBundle/Resources/views/Configuration/index.html.twig
@@ -67,6 +67,14 @@
             </p>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="btn btn-default btn-xs">
+                {{ 'missing_options_question'|trans }} <a
+                href="{{ repository_url }}" class="alert-link">{{ 'missing_options_contribute'|trans }}</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block javascripts %}
